rnsc/test_data/rns_integration/error/parser/outside_class_directive/before_class_dir/final_keyword.rns
; some comment
; another comment
final
.class public HelloWorld
.super java/lang/Object
